Exp-2/output/hf-eval-data-v3-reuslt-7b-eval/f00746_segment_objects.err
  File "./f00746_segment_objects.py", line 55
    result = Image.new("
                       ^
SyntaxError: EOL while scanning string literal
